name:                passman
version:             0.1.0.0
synopsis:            A password manager/generator
license:             GPL-2
license-file:        LICENSE
author:              Matthew Bekkema
maintainer:          mbekkema97@gmail.com

build-type:          Simple
cabal-version:       >=1.10


executable passman
  main-is:             Main.hs
  other-modules:       Passman.Hash
                       Passman.MasterPassword
                       Passman.Mode
                       Passman.PassListEntry
                       Passman.Util
                       Passman.Compat

  build-depends:       base >= 4,
                       wx,
                       wxcore,
                       cryptohash,
                       bytestring,
                       directory,
                       mtl,
                       byteable,
                       regex-compat

  default-language:    Haskell2010
