name:                passman
version:             0.1.0.0
synopsis:            A password manager/generator
license:             GPL-2
license-file:        LICENSE
author:              Matthew Bekkema
maintainer:          mbekkema97@gmail.com

build-type:          Simple
cabal-version:       >=1.10


executable passman
  main-is:             Main.hs

  other-modules:       Passman.Hash
                       Passman.MasterPassword
                       Passman.Mode
                       Passman.PassListEntry
                       Passman.Util
                       Passman.Compat

  build-depends:       base >= 4,
                       wx,
                       wxcore,
                       cryptohash,
                       bytestring,
                       directory,
                       mtl,
                       byteable,
                       regex-compat,
                       haskell-bcrypt

  default-language:    Haskell2010


test-suite test-util
  type:                detailed-0.9

  test-module:         Passman.Test.Util

  other-modules:       Passman.Util
                       Passman.Test.Test

  build-depends:       base >= 4,
                       QuickCheck,
                       bytestring,
                       cabal-test-quickcheck,
                       Cabal

  default-language:    Haskell2010


test-suite test-mode
  type:                detailed-0.9

  test-module:         Passman.Test.Mode

  other-modules:       Passman.Mode
                       Passman.Test.Test

  build-depends:       base >= 4,
                       QuickCheck,
                       cabal-test-quickcheck,
                       Cabal

  default-language:    Haskell2010
