name:                passman
version:             0.1.0.0
synopsis:            A password manager/generator
license:             GPL-2
license-file:        LICENSE
author:              Matthew Bekkema
maintainer:          mbekkema97@gmail.com

build-type:          Simple
cabal-version:       >=1.10


executable passman
  main-is:             Main.hs

  other-modules:       Passman.Hash
                       Passman.MasterPassword
                       Passman.Mode
                       Passman.PassListEntry
                       Passman.Util
                       Passman.Compat

  Include-dirs:        cbits/
  C-sources:           cbits/crypt_blowfish.c

  build-depends:       base >= 4,
                       wx,
                       wxcore,
                       cryptohash,
                       bytestring,
                       directory,
                       mtl,
                       byteable,
                       regex-compat

  default-language:    Haskell2010


test-suite test-util
  type:                detailed-0.9

  test-module:         Passman.Test.Util

  other-modules:       Passman.Util
                       Passman.Test.Test

  build-depends:       base >= 4,
                       QuickCheck,
                       bytestring,
                       cabal-test-quickcheck,
                       Cabal

  default-language:    Haskell2010


test-suite test-mode
  type:                detailed-0.9

  test-module:         Passman.Test.Mode

  other-modules:       Passman.Mode
                       Passman.Test.Test

  build-depends:       base >= 4,
                       QuickCheck,
                       cabal-test-quickcheck,
                       Cabal

  default-language:    Haskell2010

test-suite test-bcrypt
  type:                detailed-0.9

  test-module:         Passman.Test.BCrypt

  other-modules:       Passman.BCrypt

  build-depends:       base >= 4,
                       QuickCheck,
                       cabal-test-quickcheck,
                       bytestring,
                       Cabal

  C-sources:           cbits/crypt_blowfish.c

  default-language:    Haskell2010
